web documentation page

--- a/freecodecamp/Projects/TechnicalDocumentationPage/index.html
+++ b/freecodecamp/Projects/TechnicalDocumentationPage/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
     <main id="main-doc">
+      <nav id="navbar">
+        <header>
+          Topic Description
+          <a class="nav-link" href="#topic1">topic1</a>
+          <a class="nav-link" href="#topic2">topic2</a>
+          <a class="nav-link" href="#topic3">topic3</a>
+          <a class="nav-link" href="#topic4">topic4</a>
+          <a class="nav-link" href="#topic5">topic5</a>
+        </header>
+      </nav>
       <section class="main-section" id="topic1">
         <header>
           topic1
